Skill set non responsive

--- a/src/app/landing-page/about-me/about-me.component.html
+++ b/src/app/landing-page/about-me/about-me.component.html
@@ -15,7 +15,11 @@
             <div>
               <h2>About Me</h2>
 
-              <p>Hi, I’m Daniel! I’ve been working in web development for over three and a half years, starting with my apprenticeship. I’m passionate about combining the logic of computer science with the creativity of design, building websites and applications that are not only functional but also visually engaging.</p>
+              <p>
+                Hi, I’m Daniel! I’ve been working in web development for over three and a half years, starting with my apprenticeship.
+                I’m passionate about combining the logic of computer science with the creativity of design, building websites and applications
+                that are not only functional but also visually engaging.
+              </p>
 
               <p class="highlight"><span><img src="assets/img/icons/location_on.svg"></span>I’m based in Munich, but I thrive in flexible environments. Remote work fits me perfectly, and I’m open to relocating for the right opportunity.</p>
               <p class="highlight"><span><img src="assets/img/icons/new_releases.svg"></span>I approach new technologies, tools, and frameworks with curiosity and enthusiasm. For me, learning isn’t just about keeping up it’s a chance to innovate, bring fresh ideas to my work, and continually push the boundaries of what I can create.</p>
