--- a/src/app/landing-page/skill-set/skill-set.component.scss
+++ b/src/app/landing-page/skill-set/skill-set.component.scss
@@ -2,7 +2,6 @@
 @use "../../../styles/mixins" as *;
 
 section {
-  //width: 100%;
   background: radial-gradient(22.43% 43.85% at 1.22% 52.45%, rgba(8, 70, 59, 0.3) 0%, #1C1C1C 100%);
 
   > div {
@@ -13,44 +12,46 @@ section {
       display: flex;
       align-items: flex-end;
       justify-content: space-between;
-      //flex-wrap: wrap;
 
       > article {
-        margin: 0 25px 0 0;
         flex: 1 1 50%;
         min-width: 300px;
+        margin: 0 25px 0 0;
+
+        //TODO - Remove when responsive styling
+        overflow-y: hidden;
 
         > div {
           > h3 {
+            color: $green-hundred;
+            line-height: 100%;
             font-weight: 700;
             font-size: 24px;
-            line-height: 100%;
-            color: #3DCFB6;
           }
 
           > div {
-            background: #3DCFB61A;
-            border: 1px solid #3DCFB6;
-            max-width: 520px;
+            border: 1px solid $green-hundred;
+            background: $box-dark;
+            border-radius: 30px;
             max-height: 503px;
+            max-width: 520px;
+            padding: 32px;
             opacity: 1;
             gap: 40px;
-            border-radius: 30px;
-            padding: 32px;
 
             > p {
-              font-weight: 400;
               font-size: 18px;
+              font-weight: 400;
               line-height: 120%;
               text-align: justify;
             }
 
             > h2 {
+              letter-spacing: -3%;
+              line-height: 100%;
               font-weight: 700;
               font-size: 64px;
-              line-height: 100%;
-              letter-spacing: -3%;
-              color: #3DCFB6;
+              color: $green-hundred;
               margin: 0;
             }
 
@@ -64,7 +65,7 @@ section {
 
                 > span {
                   font-family: "Fira Code", monospace;
-                  color: #3DCFB6;
+                  color: $green-hundred;
                 }
               }
             }
@@ -78,19 +79,16 @@ section {
       }
 
       > div {
-        margin: 0 0 0 25px;
-
-        flex: 1 1 50%;
-        min-width: 300px;
-
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
         gap: 2rem;
-        text-align: center;
-
-        align-items: flex-start;
         width: 100%;
+        flex: 1 1 50%;
+        display: grid;
+        min-width: 300px;
         max-width: 632px;
+        margin: 0 0 0 25px;
+        text-align: center;
+        align-items: flex-start;
+        grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
 
         > div {
           display: flex;
@@ -99,17 +97,17 @@ section {
           justify-content: center;
 
           > figure {
-            flex-direction: column;
+            margin: 0;
             display: flex;
             align-items: center;
+            flex-direction: column;
             justify-content: flex-start;
-            margin: 0;
 
             > img {
               margin-bottom: 5px;
-              width: 100%;
               max-height: 50px;
               height: auto;
+              width: 100%;
             }
 
             &:hover {
@@ -125,7 +123,7 @@ section {
 
           &:nth-last-child(2) {
             figure:hover {
-              color: #3DCFB6;
+              color: $green-hundred;
               transition: opacity 0.5s ease;
             }
           }
@@ -135,65 +133,79 @@ section {
   }
 }
 
-//TODO
 .tooltip {
-  position: relative;
   display: inline-block;
+  position: relative;
   text-align: center;
   cursor: pointer;
-}
-
-.tooltip-content {
-  position: absolute;
-  bottom: 120%;
-  left: 50%;
-  transform: translateX(-50%);
-  background: white;
-  color: #3DCFB6;
-  font-size: 14px;
-  padding: 8px 12px;
-  border-radius: 8px;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.15);
-  opacity: 0;
-  pointer-events: none;
-  transition: opacity 0.3s;
-  text-align: center;
-  z-index: 10;
-  white-space: nowrap;
-
-  &::after {
-    content: "";
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    bottom: -6px;
-    width: 0;
-    height: 0;
-    border-left: 6px solid transparent;
-    border-right: 6px solid transparent;
-    border-top: 6px solid white;
-    pointer-events: none;
-    aria-hidden: true;
-  }
 
   > div {
-    display: flex;
-    justify-content: center;
-    > figure {
-      margin: 0;
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-end;
-      align-items: center;
+    left: 50%;
+    opacity: 0;
+    z-index: 10;
+    bottom: 120%;
+    color: $green-hundred;
+    font-size: 14px;
+    padding: 8px 12px;
+    background: white;
+    border-radius: 8px;
+    text-align: center;
+    position: absolute;
+    white-space: nowrap;
+    pointer-events: none;
+    transition: opacity 0.3s;
+    transform: translateX(-50%);
+    box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+
+    > p {
+      margin: 2px 0 8px 0;
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 100%;
+      text-align: center;
     }
 
-    > figure:nth-child(2) {
-      margin: 0 10px;
+    > div {
+      display: flex;
+      justify-content: center;
+
+      > figure {
+        margin: 0;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: flex-end;
+
+        > figcaption {
+          font-weight: 700;
+          font-size: 12px;
+          line-height: 108%;
+          text-align: center;
+          margin-top: 8px;
+        }
+      }
+
+      > figure:nth-child(2) {
+        margin: 0 10px;
+      }
+    }
+
+    &::after {
+      width: 0;
+      height: 0;
+      left: 50%;
+      content: "";
+      bottom: -12px;
+      position: absolute;
+      pointer-events: none;
+      transform: translateX(-50%);
+      border-top: 12px solid white;
+      border-left: 12px solid transparent;
+      border-right: 12px solid transparent;
     }
   }
-}
 
-.tooltip:hover .tooltip-content {
-  opacity: 1;
+  &:hover > div {
+    opacity: 1;
+  }
 }
-
