Porfolio section structur

--- a/src/app/landing-page/featured-projects/featured-projects.component.html
+++ b/src/app/landing-page/featured-projects/featured-projects.component.html
@@ -1,1 +1,22 @@
-<p>featured-projects works!</p>
+<section>
+  <div class="max-wrapper">
+    <div>
+      <h3>Portfolio</h3>
+      <h2>Featured Projects</h2>
+      <p>Explore a selection of my work here - Interact with projects to see my skills in action.</p>
+      <div>
+        <p>Join</p>
+        <p>Angular...</p>
+      </div>
+      <div>
+        <p>Sharkie</p>
+      </div>
+      <div>
+        <p>Pokedex</p>
+      </div>
+      <div>
+        <p>DA Bubble</p>
+      </div>
+    </div>
+  </div>
+</section>
