--- a/src/app/landing-page/featured-projects/featured-projects.component.html
+++ b/src/app/landing-page/featured-projects/featured-projects.component.html
@@ -3,19 +3,21 @@
     <div>
       <h3>Portfolio</h3>
       <h2>Featured Projects</h2>
-      <p>Explore a selection of my work here - Interact with projects to see my skills in action.</p>
+      <span>Explore a selection of my work here - Interact with <br> projects to see my skills in action.</span>
       <div>
-        <p>Join</p>
-        <p>Angular...</p>
-      </div>
-      <div>
-        <p>Sharkie</p>
-      </div>
-      <div>
-        <p>Pokedex</p>
-      </div>
-      <div>
-        <p>DA Bubble</p>
+        <div>
+          <p>Join</p>
+          <span>Angular | </span>
+        </div>
+        <div>
+          <p>Pok-Dex</p>
+        </div>
+        <div>
+          <p>Sharkie</p>
+        </div>
+        <div>
+          <p>DA Bubble</p>
+        </div>
       </div>
     </div>
   </div>
