--- a/src/app/landing-page/featured-projects/featured-projects.component.scss
+++ b/src/app/landing-page/featured-projects/featured-projects.component.scss
@@ -1,5 +1,66 @@
+@use "../../../styles/colors" as *;
+
 section {
   > div {
     margin-top: 100px;
+
+    > div {
+        h3 {
+          margin: 0;
+          color: $green-hundred;
+          line-height: 100%;
+          font-weight: 700;
+          font-size: 24px;
+        }
+
+        h2 {
+          margin: 20px 0 40px 0;
+          color: $green-hundred;
+          letter-spacing: -3%;
+          line-height: 100%;
+          font-weight: 700;
+          font-size: 64px;
+        }
+
+      > div {
+        margin-top: 40px;
+
+        > div {
+          max-width: 880px;
+          max-height: 109px;
+          justify-content: space-between;
+          opacity: 1;
+          padding: 40px 32px;
+          display: flex;
+          align-items: center;
+          border-bottom: 1px solid #3DCFB6;
+
+          > p {
+            font-family: "Fira Code";
+            font-weight: 700;
+            font-size: 24px;
+            line-height: 120%;
+            margin: 0;
+          }
+
+          > span {
+            font-family: "Karla";
+            font-weight: 400;
+            font-size: 18px;
+            leading-trim: NONE;
+            line-height: 120%;
+
+          }
+
+          &:first-child {
+            border-top: 1px solid #3DCFB6
+          }
+
+          &:hover {
+            background: $green-hover;
+          }
+        }
+      }
+    }
   }
 }
