--- a/src/app/landing-page/featured-projects/featured-projects.component.html
+++ b/src/app/landing-page/featured-projects/featured-projects.component.html
@@ -4,19 +4,23 @@
       <h3>Portfolio</h3>
       <h2>Featured Projects</h2>
       <span>Explore a selection of my work here - Interact with <br> projects to see my skills in action.</span>
+
       <div>
         <div>
-          <p>Join</p>
-          <span>Angular | </span>
-        </div>
-        <div>
           <p>Pok-Dex</p>
+          <p><abbr>HTML</abbr> | <abbr>CSS</abbr> | <code>JavaScript</code> | <code>Bootstrap</code></p>
+        </div>
+        <div class="test">
+          <p>Join</p>
+          <p><code>Angular</code> | <code>TypeScript</code> | <abbr>HTML</abbr> | <abbr>CSS</abbr> | <code>Firebase</code></p>
         </div>
         <div>
           <p>Sharkie</p>
+          <p><abbr>HTML</abbr> | <abbr>CSS</abbr> | <code>JavaScript</code></p>
         </div>
         <div>
           <p>DA Bubble</p>
+          <p><code>Angular</code> | <code>TypeScript</code> | <code>Firebase</code></p>
         </div>
       </div>
     </div>
