--- a/src/app/landing-page/about-me/about-me.component.html
+++ b/src/app/landing-page/about-me/about-me.component.html
@@ -11,9 +11,9 @@
 
         <article>
           <div>
-            <h3>Who I Am</h3>
+            <h2>Who I Am</h2>
             <div>
-              <h2>About Me</h2>
+              <h3>About me</h3>
 
               <p>
                 Hi, I’m Daniel! I’ve been working in web development for over three and a half years, starting with my apprenticeship.
