--- a/src/app/landing-page/above-the-fold/above-the-fold.component.scss
+++ b/src/app/landing-page/above-the-fold/above-the-fold.component.scss
@@ -30,6 +30,7 @@ section {
       font-size: 40px;
       font-weight: 400;
       line-height: 100%;
+      font-family: "Fira Code", monospace;
     }
 
     > div {
