--- a/src/app/landing-page/featured-projects/featured-projects.component.html
+++ b/src/app/landing-page/featured-projects/featured-projects.component.html
@@ -1,28 +1,25 @@
 <section>
   <div class="max-wrapper">
     <div>
-      <h3>Portfolio</h3>
-      <h2>Featured Projects</h2>
-      <span>Explore a selection of my work here - Interact with <br> projects to see my skills in action.</span>
+      <h2>Portfolio</h2>
+      <h3>Featured Projects</h3>
+      <p>Explore a selection of my work here - Interact with <br> projects to see my skills in action.</p>
 
-      <div>
-        <div>
-          <p>Pok-Dex</p>
-          <p><abbr>HTML</abbr> | <abbr>CSS</abbr> | <code>JavaScript</code> | <code>Bootstrap</code></p>
-        </div>
-        <div class="test">
-          <p>Join</p>
-          <p><code>Angular</code> | <code>TypeScript</code> | <abbr>HTML</abbr> | <abbr>CSS</abbr> | <code>Firebase</code></p>
-        </div>
-        <div>
-          <p>Sharkie</p>
-          <p><abbr>HTML</abbr> | <abbr>CSS</abbr> | <code>JavaScript</code></p>
-        </div>
-        <div>
-          <p>DA Bubble</p>
-          <p><code>Angular</code> | <code>TypeScript</code> | <code>Firebase</code></p>
-        </div>
-      </div>
+      <ul>
+        <li *ngFor="let project of projects" [ngClass]="project.preview" class="project">
+          <h4>{{ project.name }}</h4>
+          <p>
+            <ng-container *ngFor="let tech of project.tech; let last = last">
+              <ng-container [ngSwitch]="tech">
+                <abbr *ngSwitchCase="'HTML'">HTML</abbr>
+                <abbr *ngSwitchCase="'CSS'">CSS</abbr>
+                <code *ngSwitchDefault>{{ tech }}</code>
+              </ng-container>
+              <span *ngIf="!last"> | </span>
+            </ng-container>
+          </p>
+        </li>
+      </ul>
     </div>
   </div>
 </section>
