--- a/src/app/landing-page/featured-projects/featured-projects.component.scss
+++ b/src/app/landing-page/featured-projects/featured-projects.component.scss
@@ -5,60 +5,73 @@ section {
     margin-top: 100px;
 
     > div {
-        h3 {
-          margin: 0;
-          color: $green-hundred;
-          line-height: 100%;
-          font-weight: 700;
-          font-size: 24px;
-        }
+      > h2 {
+        margin: 0;
+        font-size: 24px;
+        font-weight: 700;
+        line-height: 100%;
+        color: $green-hundred;
+      }
 
-        h2 {
-          margin: 20px 0 40px 0;
-          color: $green-hundred;
-          letter-spacing: -3%;
-          line-height: 100%;
-          font-weight: 700;
-          font-size: 64px;
-        }
+      > h3 {
+        color: $green-hundred;
+        margin: 20px 0 40px 0;
+        letter-spacing: -3%;
+        line-height: 100%;
+        font-weight: 700;
+        font-size: 64px;
+      }
 
-      > div {
+      > p {
+        margin: 0;
+      }
+
+      > ul {
+        padding: 0;
         margin-top: 40px;
+        margin-bottom: 0;
         position: relative;
 
-        > div {
+        > li {
+          opacity: 1;
+          display: flex;
           max-width: 880px;
           max-height: 109px;
-          justify-content: space-between;
-          opacity: 1;
           padding: 40px 32px;
-          display: flex;
           align-items: center;
-          border-bottom: 1px solid #3DCFB6;
+          justify-content: space-between;
+          border-bottom: 1px solid $green-hundred;
 
-          > p {
-            font-family: "Fira Code";
+          > h4 {
+            line-height: 120%;
             font-weight: 700;
             font-size: 24px;
-            line-height: 120%;
             margin: 0;
           }
 
-          > span {
-            font-family: "Karla";
-            font-weight: 400;
+          > p {
+            margin: 0;
             font-size: 18px;
+            font-weight: 400;
             line-height: 120%;
 
+            > span {
+              color: $green-hundred;
+            }
           }
 
           &:first-child {
-            border-top: 1px solid #3DCFB6
+            border-top: 1px solid $green-hundred;
           }
 
           &:hover {
             cursor: pointer;
             background: $green-hover;
+
+            > h4::after {
+              content: url("/assets/img/icons/arrow_outward.svg");
+              margin-left: 8px;
+            }
           }
         }
       }
@@ -66,7 +79,27 @@ section {
   }
 }
 
-.test {
+.project {
+  &:first-child {
+    &::before {
+      top: 0;
+    }
+
+    &::after {
+      top: 0;
+    }
+  }
+
+  &:last-child {
+    &::before {
+      bottom: 0;
+    }
+
+    &::after {
+      bottom: 0;
+    }
+  }
+
   &::before {
     content: "";
     position: absolute;
@@ -78,37 +111,53 @@ section {
         transparent 1px,
         transparent 11px
     );
-    opacity: 0;
-    pointer-events: none;
     transform: translate(20px, 20px);
-    width: 15vw;
-    max-width: 600px;
-    aspect-ratio: 16/10;
-    right: 0;
     transition: opacity 0.3s ease;
+    pointer-events: none;
+    aspect-ratio: 16/10;
+    max-width: 400px;
+    width: 15vw;
+    opacity: 0;
     z-index: 0;
+    right: 0;
   }
 
   &::after {
-    border-radius: 10px;
-    content: "";
-    position: absolute;
     right: 0;
-    background: url("/assets/img/previews/join.png") no-repeat center/contain;
-    width: 15vw;
-    max-width: 600px;
-    aspect-ratio: 16/10;
+    z-index: 1;
     opacity: 0;
+    content: "";
+    width: 15vw;
+    max-width: 400px;
+    position: absolute;
+    border-radius: 10px;
+    aspect-ratio: 16/10;
     pointer-events: none;
     transition: opacity 0.3s ease;
+  }
 
-    z-index: 1;
+  &:hover::after {
+    opacity: 1;
+
+  }
+
+  &:hover::before {
+    opacity: 1;
   }
 }
 
-.test:hover::after {
-  opacity: 1;
+.pok-dex:hover::after {
+  background: url("/assets/img/previews/pok-dex.png") no-repeat center/contain;
 }
-.test:hover::before {
-  opacity: 1;
+
+.join:hover::after {
+  background: url("/assets/img/previews/join.png") no-repeat center/contain;
+}
+
+.sharkie:hover::after {
+  background: url("/assets/img/previews/sharkie.png") no-repeat center/contain;
+}
+
+.da_bubble:hover::after {
+  background: url("/assets/img/previews/da_bubble.png") no-repeat center/contain;
 }
