--- a/src/styles/_default.scss
+++ b/src/styles/_default.scss
@@ -1,8 +1,11 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   color: white;
   background: #1C1C1C;
-  scroll-behavior: smooth;
 
   a {
     text-decoration: none;
