--- a/src/app/landing-page/contact-me/contact-me.component.scss
+++ b/src/app/landing-page/contact-me/contact-me.component.scss
@@ -1,5 +1,182 @@
+@use "../../../styles/colors" as *;
+@use "../../../styles/mixins" as *;
+
 section {
-  background-color: #1c1c1c;
   width: 100%;
-  height: 500px;
+
+  > div {
+    margin-top: 200px;
+
+    > div {
+      display: flex;
+
+      > div {
+        flex: 50%;
+        margin: 0 25px 0 0;
+
+        h2, h3, h4, span {
+          color: $green-hundred;
+        }
+
+        > h2 {
+          margin-top: 0;
+          font-size: 24px;
+          font-weight: 500;
+          line-height: 100%;
+        }
+
+        > h3 {
+          margin: 0;
+          font-size: 64px;
+          font-weight: 700;
+          line-height: 100%;
+          letter-spacing: -3%;
+        }
+
+        > h4 {
+          font-size: 24px;
+          font-weight: 700;
+          line-height: 120%;
+        }
+
+        > p {
+          font-size: 16px;
+          max-width: 568px;
+          font-weight: 400;
+          line-height: 120%;
+        }
+      }
+
+      form {
+        flex: 50%;
+        display: flex;
+        margin: 0 0 0 25px;
+        flex-direction: column;
+
+        label {
+          gap: 10px;
+          opacity: 1;
+          display: flex;
+          padding: 32px;
+          font-size: 24px;
+          max-width: 616px;
+          font-weight: 500;
+          line-height: 120%;
+          max-height: 131px;
+          color: $green-hundred;
+          flex-direction: column;
+          font-family: "Fira Code", monospace;
+
+          &:nth-child(3) {
+            max-height: unset;
+          }
+
+          &:nth-child(odd) {
+            border-top: 1px solid #3DCFB680;
+            border-bottom: 1px solid #3DCFB680;
+
+            &:hover {
+              border-top: 1px solid #3DCFB6 !important;
+              border-bottom: 1px solid $green-hundred !important;
+            }
+          }
+
+          &:hover {
+            cursor: pointer;
+
+            > input, textarea {
+              color: white;
+
+              &::placeholder {
+                color: white;
+              }
+            }
+          }
+
+          > input, textarea {
+            font-family: "Karla", sans-serif;
+            line-height: 120%;
+            color: #FFFFFFCC;
+            font-weight: 400;
+            font-size: 18px;
+
+            &::placeholder {
+              color: #FFFFFFCC;
+            }
+          }
+
+          > textarea {
+            word-wrap: break-word;
+            overflow-y: hidden;
+            resize: none;
+            height: 22px;
+          }
+        }
+
+        .custom-checkbox {
+          padding: 0;
+          display: flex;
+          margin: 36px 0;
+          text-align: left;
+          align-items: center;
+          flex-direction: row;
+
+          input[type="checkbox"] {
+            border: 2px solid #3DCFB680;
+            border-radius: 4px;
+            position: relative;
+            appearance: none;
+            cursor: pointer;
+            height: 18px;
+            width: 18px;
+
+            &:checked::after {
+              top: -2px;
+              left: 2px;
+              content: "✓";
+              font-size: 16px;
+              position: absolute;
+              color: $green-hundred;
+            }
+
+            &:hover {
+              background: #3DCFB64D;
+            }
+          }
+
+          > span {
+            line-height: 120%;
+            text-align: left;
+            font-weight: 400;
+            font-size: 15px;
+            color: white;
+
+            > a {
+              color: #3DCFB6;
+              padding: 0 4px;
+              font-size: 15px;
+              font-weight: 400;
+              line-height: 120%;
+              letter-spacing: -3%;
+              font-family: "Fira Code", monospace;
+
+              &:hover {
+                color: white;
+                text-decoration: underline;
+                text-underline-offset: 9px;
+                text-decoration-thickness: 1px;
+                text-decoration-color: $green-hundred;
+              }
+            }
+          }
+        }
+
+        > button {
+          @include pill-button;
+          align-self: center;
+          color: white;
+        }
+      }
+    }
+  }
 }
