--- a/src/styles.scss
+++ b/src/styles.scss
@@ -63,3 +63,4 @@ $Portfolio-theme: mat.define-light-theme((
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+input, textarea { all: unset; }
