--- a/src/app/landing-page/contact-me/contact-me.component.html
+++ b/src/app/landing-page/contact-me/contact-me.component.html
@@ -41,7 +41,7 @@
           <input type="checkbox" name="subscribe" id="subscribe" ngModel required>
 
           <span>
-            I've read the <a href="/privacy-policy" target="_blank">privacy policy</a>
+            I've read the <a [routerLink]="['/privacy-policy']" target="_blank">privacy policy</a>
             and agree to the processing of my data as outlined.
           </span>
         </label>
