--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -13,7 +13,7 @@
         <li class="test"><a target="_blank" rel="noopener" href="https://github.com/uteki">Github</a></li>
         <li><a target="_blank" rel="noopener">LinkedIn</a></li>
         <li><a href="mailto:danietr99@gmail.com">Email</a></li>
-        <li><a>Legal Notice</a></li>
+        <li><a [routerLink]="['/legal-notice']" target="_blank">Legal Notice</a></li>
       </ul>
     </nav>
   </div>
