--- a/src/app/landing-page/contact-me/contact-me.component.html
+++ b/src/app/landing-page/contact-me/contact-me.component.html
@@ -20,7 +20,7 @@
       <form #contactForm="ngForm" (ngSubmit)="onSubmit(contactForm)">
         <label>
           What's your name?
-          <input type="text" name="name" placeholder="Your name goes here" ngModel required>
+          <input #name="ngModel" #nameInput type="text" name="name" placeholder="Your name goes here" ngModel required>
         </label>
 
         <label
@@ -29,28 +29,28 @@
           (touchstart)="hoverMiddle(true)"
           (touchend)="hoverMiddle(false)">
           What's your email?
-          <input type="email" name="email" placeholder="youremail@email.com" ngModel required>
+          <input #email="ngModel" #emailInput type="email" name="email" placeholder="youremail@email.com" ngModel required pattern="[a-zA-Z0-9._%+\-]+@[a-zA-Z0-9.\-]+\.[a-zA-Z]{2,}">
         </label>
 
         <label>
           How can I help you?
-          <textarea name="message" maxlength="800" placeholder="Hello Daniel, I am interested in..." ngModel required (input)="autoGrow($event)"></textarea>
+          <textarea #message="ngModel" #messageInput name="message" maxlength="800" placeholder="Hello Daniel, I am interested in..." ngModel required (input)="autoGrow($event)"></textarea>
         </label>
 
-        <label class="custom-checkbox">
-          <input type="checkbox" name="subscribe" id="subscribe" ngModel required>
+        <label class="custom-checkbox" (click)="clearCheckboxError()">
+          <input #checkbox="ngModel" #subscribeInput type="checkbox" name="subscribe" id="subscribe" ngModel required>
 
-          <span>
+          <span [class.error]="showCheckboxError">
             I've read the <a [routerLink]="['/privacy-policy']" target="_blank">privacy policy</a>
             and agree to the processing of my data as outlined.
           </span>
         </label>
 
         <button
-          (mouseenter)="onHover($event)"
-          (mouseleave)="onHoverOut($event)"
-          (touchstart)="onHover($event)"
-          (touchend)="onHoverOut($event)"
+          (mouseenter)="onHover($event); checkForm(contactForm, true)"
+          (mouseleave)="onHoverOut($event); checkForm(contactForm, false)"
+          (touchstart)="onHover($event); checkForm(contactForm, true)"
+          (touchend)="onHoverOut($event); checkForm(contactForm, false)"
           type="submit" [disabled]="contactForm.invalid">
           <span>Say Hello ;)</span>
         </button>
