--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -10,8 +10,8 @@
 
     <nav aria-label="Footer navigation">
       <ul>
-        <li class="test"><a target="_blank" rel="noopener" href="https://github.com/uteki">Github</a></li>
-        <li><a target="_blank" rel="noopener">LinkedIn</a></li>
+        <li><a target="_blank" rel="noopener" href="https://github.com/uteki">Github</a></li>
+        <li><a target="_blank" rel="noopener" href="https://www.linkedin.com/in/daniel-tran-72285930b">LinkedIn</a></li>
         <li><a href="mailto:danietr99@gmail.com">Email</a></li>
         <li><a [routerLink]="['/legal-notice']" target="_blank">Legal Notice</a></li>
       </ul>
