--- a/src/app/landing-page/about-me/about-me.component.html
+++ b/src/app/landing-page/about-me/about-me.component.html
@@ -1,4 +1,4 @@
-<section>
+<section id="about">
   <div class="max-wrapper">
     <div>
         <figure [class.hovered]="hovered" (mouseenter)="onHover()">
