--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer>
   <div class="max-wrapper">
     <div>
-      <img alt="Logo" ngSrc="./assets/img/danieslogo.webp" height="363" width="906" priority>
+      <img [routerLink]="['']" (click)="scrollToTop()" alt="Logo" ngSrc="./assets/img/danieslogo.webp" height="363" width="906" priority>
       <p>Web Developer</p>
       <address>Munich Germany</address>
     </div>
