--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -20,6 +20,6 @@
         Projects</a>
     </nav>
 
-    <img alt="Logo" ngSrc="./assets/img/danieslogo.webp" height="365" width="902" priority>
+    <img [routerLink]="['']" alt="Logo" ngSrc="./assets/img/danieslogo.webp" height="365" width="902" priority>
   </div>
 </header>
