--- a/src/styles.scss
+++ b/src/styles.scss
@@ -43,6 +43,28 @@ $Portfolio-theme: mat.define-light-theme((
 @import "styles/colors";
 @import "styles/fonts";
 
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+input, textarea { all: unset; }
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus {
+  -webkit-box-shadow: 0 0 0 1000px #1C1C1C inset;
+  -webkit-text-fill-color: white;
+  transition: background-color 9999s ease-in-out 0s;
+}
+
+body.terms-privacy app-root {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  background: linear-gradient(55.22deg, #1C1C1C 36.26%, #08463B 93.28%);
+}
+
 .max-wrapper {
   max-width: 1440px;
   padding: 0 24px;
@@ -59,19 +81,4 @@ $Portfolio-theme: mat.define-light-theme((
 
 .d-none {
   display: none;
-}
-
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-input, textarea { all: unset; }
-
-input:-webkit-autofill,
-input:-webkit-autofill:hover,
-input:-webkit-autofill:focus,
-textarea:-webkit-autofill,
-textarea:-webkit-autofill:hover,
-textarea:-webkit-autofill:focus {
-  -webkit-box-shadow: 0 0 0 1000px #1C1C1C inset;
-  -webkit-text-fill-color: white;
-  transition: background-color 9999s ease-in-out 0s;
 }
