Fix routing issue on swiper (loop:true not working correctly), switched to rewind

--- a/src/app/landing-page/colleagues-say/colleagues-say.component.html
+++ b/src/app/landing-page/colleagues-say/colleagues-say.component.html
@@ -6,7 +6,7 @@
       <swiper-container #swiper
         slides-per-view="auto"
         centered-slides="true"
-        loop="true"
+        rewind="true"
         space-between="32"
         grab-cursor="true"
         mousewheel="true"
